@@ -40,6 +40,23 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version> <configuration>
+                <argLine>--enable-preview</argLine>
+            </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.3.0</version>
                 <executions>
@@ -66,9 +83,14 @@
                 </executions>
                 <configuration>
                     <doclint>none</doclint>
+
+                    <additionalOptions>
+                        <additionalOption>--enable-preview</additionalOption>
+                        <additionalOption>--release</additionalOption>
+                        <additionalOption>24</additionalOption>
+                    </additionalOptions>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
